# ArticleDynamicRebind

./: CMakeLists.txt  flib.cpp  glib.cpp  glib.h  main.cpp
